# Private-messages-bot

./: bot.py  config.py  pyproject.toml  requirements.txt
callbacks/: __init__.py  main.py
database/: models.py
handlers/: __init__.py  main.py
handlers/inline/: __init__.py  main.py
