[tool.poetry]
name = "privatemessages"
version = "0.1.0"
description = ""
authors = ["GlobalAA <globala977@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
aiogram = "^3.11.0"
tortoise-orm = "^0.21.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
